FST from the current directory.
----------------------------------------------------------------------
Tue Aug 31 20:25:41 2004                        Michael Jennings (mej)

Oops.  Broke building of PDR's.
----------------------------------------------------------------------
Tue Sep 14 18:06:06 2004                        Michael Jennings (mej)

Fixed timestamp checking.

Translate perl(Some::Module) to perl-Some-Module for installing build
deps.
----------------------------------------------------------------------
Wed Sep 29 16:57:17 2004                        Michael Jennings (mej)

Note when packages were skipped rather than just saying they built.

Check for updates to packages that were previously broken before
refusing to rebuild them.
----------------------------------------------------------------------
Thu Sep 30 17:59:31 2004                        Michael Jennings (mej)

Fixed diffs of CRLF-delimited files.

Changed default timeout to 900 seconds.
----------------------------------------------------------------------
Sun Oct  3 21:18:30 2004                        Michael Jennings (mej)

Don't barf if stat fails.
----------------------------------------------------------------------
Tue Oct 19 15:34:28 2004                        Michael Jennings (mej)

Fixed minor cosmetic issue in perlpkg.

specgen will now scan installed files, update the spec, and replace
paths with auto* macros as appropriate.

Added debugging to try to track down weird permissions issue.
----------------------------------------------------------------------
Wed Oct 20 15:00:30 2004                        Michael Jennings (mej)

Still trying to fix permissions issue.
----------------------------------------------------------------------
Tue Oct 26 12:26:26 2004                        Michael Jennings (mej)

Undo some verbose debugging.

Ignore non-spec files in SPM's too.
----------------------------------------------------------------------