@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: buildtool,v 1.200 2004/10/20 19:02:39 mej Exp $
+# $Id: buildtool,v 1.201 2004/10/29 20:35:28 mej Exp $
 #
 
 use strict;
@@ -569,7 +569,7 @@ build_package_forked
                     &nuke_tree("$logfile.save");
                 } elsif (-e "$logfile.save") {
                     dprint "Previous successful log file $logfile.save exists -- Moving back into place.\n";
-                    &nuke_tree($logfile);
+                    &move_files($logfile, "$logfile.latest");
                     &move_files("$logfile.save", $logfile);
                 }
             } else {
@@ -1069,7 +1069,7 @@ main
 
     if ($OPTION{"version"}) {
         &print_version($PROGNAME, $VERSION, "Michael Jennings <mej\@eterm.org>",
-                       'CVS Revision $Revision: 1.200 $ created on $Date: 2004/10/20 19:02:39 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.201 $ created on $Date: 2004/10/29 20:35:28 $ by $Author: mej $ ');
     }
     if ($OPTION{"help"}) {
 	&print_usage_info();
