@@ -667,3 +667,11 @@ Undo some verbose debugging.
 
 Ignore non-spec files in SPM's too.
 ----------------------------------------------------------------------
+Fri Oct 29 16:34:32 2004                        Michael Jennings (mej)
+
+Perpetual rebuild issue is now worked around.
+
+Fix mzprep error output error.
+
+Preserve latest logfile for each package.
+----------------------------------------------------------------------
